[gd_scene load_steps=4 format=3 uid="uid://bw2h6olocn3pw"]

[ext_resource type="Script" path="res://menus/startscreen.gd" id="1_mco7v"]
[ext_resource type="Script" path="res://menus/Version.gd" id="5_851gh"]
[ext_resource type="Script" path="res://menus/Highscore.gd" id="6_1jup0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mco7v")

[node name="Options" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 1080)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 1080.0
grow_horizontal = 0
theme_override_constants/separation = 0

[node name="Start" type="Button" parent="Options"]
custom_minimum_size = Vector2(250, 216)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 100
action_mode = 0
text = "Start"
icon_alignment = 1

[node name="Tutorial" type="Button" parent="Options"]
custom_minimum_size = Vector2(250, 216)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 70
action_mode = 0
text = "Tutorial"
icon_alignment = 1

[node name="Options" type="Button" parent="Options"]
custom_minimum_size = Vector2(250, 216)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 70
action_mode = 0
text = "Options"
icon_alignment = 1

[node name="Credits" type="Button" parent="Options"]
custom_minimum_size = Vector2(250, 216)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 70
action_mode = 0
text = "Credits"
icon_alignment = 1

[node name="Quit" type="Button" parent="Options"]
custom_minimum_size = Vector2(250, 216)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 100
action_mode = 0
text = "Quit"
icon_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Version" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 72.0
grow_vertical = 0
script = ExtResource("5_851gh")
metadata/_edit_use_anchors_ = true

[node name="Stats" type="VBoxContainer" parent="."]
layout_mode = 1

[node name="Highscore" type="Label" parent="Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Highscore: "
script = ExtResource("6_1jup0")

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Options/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Options/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Options/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Options/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_quit_pressed"]
